<resources>
    <string name="app_name">MY_APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="search">Search</string>
    <string name="contacts">Contacts</string>
    <string name="navigate_map">Navigate Map</string>
    <string name="gmail">Gmail</string>
    <string name="Voice">voice</string>
    <string name="speakmail">Speakmail</string>
    <string name="send">Send</string>
    <string name="no_name" />
    <string name="call">CALL</string>
    <string name="exit">Exit</string>
    <string name="list_file">List File</string>
    <string name="restaurants">Restaurants</string>
    <string name="hospitals">Hospitals</string>
    <string name="showrooms">Showrooms</string>
    <string name="nulls" />
    <string name="navigate">Navigate</string>
    <string name="mic">MIC</string>
    <string name="noneg" />
    <string name="searchg">Search</string>
    <string name="speakg">Speak</string>
    <string name="listen_to_music">Listen to music</string>
    <string-array name="names">
        <item>Google</item>
        <item>Youtube</item>
    </string-array>

</resources>
